# crescent

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeOptions.cmake  README.md  config.hpp.in  image.cmake  limine.cfg  limine.conf
apps/: CMakeLists.txt
apps/console/: CMakeLists.txt
apps/console/src/: main.cpp
apps/desktop/: BUGS.md  CMakeLists.txt
apps/desktop/src/: CMakeLists.txt  button.cpp  button.hpp  context.cpp  context.hpp  desktop.cpp  desktop.hpp  event.hpp  keyboard.hpp  main.cpp  mouse.hpp  primitive.hpp  taskbar.cpp  taskbar.hpp  text.cpp  text.hpp  window.cpp  window.hpp
apps/evm/: CMakeLists.txt
apps/evm/src/: CMakeLists.txt  chipset.cpp  chipset.hpp  main.cpp  pci.cpp  pci.hpp  vga.cpp  vga.hpp  vm.cpp  vm.hpp
apps/gui/: CMakeLists.txt  main.c
apps/init/: CMakeLists.txt  init.c
apps/init/src/: main.c  main.cpp  sys.h
apps/libc_test_app/: CMakeLists.txt  libc_test_app.c
apps/qgbe/: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/qgbe/src/: apu.c  apu.h  bus.c  bus.h  cart.h  cpu.c  cpu.h  cpu_instrs.c  dis.c  dis.h  emu.c  emu.h  inst.c  inst.h  main.c  ppu.c  ppu.h  ppu_utils.c  timer.c  timer.h  types.h
apps/user_tty/: CMakeLists.txt  user_tty.c
apps/user_tty/src/: main.c
kernel/: CMakeLists.txt  limine.cfg
kernel/.config/: kernel.ld  toolchain.cmake  toolchain_x86_64.cmake
kernel/include/crescent/: dev.h  fb.h  fs.h  handle.h  input.h  sys.h
kernel/src/: CMakeLists.txt  main.c  types.h
kernel/src/acpi/: acpi.h
kernel/src/arch/: CMakeLists.txt  misc.h  mod.h
kernel/src/dev/: CMakeLists.txt  con.h  fb.c  fb.h  fbcon.c  fbcon.h  log.c  log.h  timer.c  timer.h
kernel/src/exe/: elf_loader.c  elf_loader.h
kernel/src/fs/: CMakeLists.txt  ext2.c  fat.c  fat.h  posix_rootfs.c  posix_rootfs.h  tar.c  tar.h  vfs.c  vfs.h
kernel/src/mem/: page.c  pmalloc.c  pmalloc.h  utils.c  utils.h  vm.c  vm.h  vmem.c
kernel/src/sched/: CMakeLists.txt  event_queue.c  event_queue.h  (+10 more)
libs/: .gitignore  CMakeLists.txt  cross-file.toml
libs/common/: CMakeLists.txt  start.c  sys.c  sys.h
libs/libc/: CMakeLists.txt
libs/libcxx/: CMakeLists.txt
libs/libnet/: CMakeLists.txt
libs/libtext/: CMakeLists.txt
libs/libui/: CMakeLists.txt
libs/libwindower/: CMakeLists.txt
src/: CMakeLists.txt  a.asm  arch.hpp  console.cpp  console.hpp  cxx.cpp  cxx.hpp  f.asmd  fb.cpp  fb.hpp  io.hpp  limine.cpp  main.c  main.cpp  new.hpp  start.cpp  types.h  types.hpp  utils.hpp
src/acpi/: CMakeLists.txt  acpi.c  acpi.cpp  acpi.h  acpi.hpp  common.cpp  common.hpp  events.cpp  events.hpp  fadt.cpp  fadt.hpp  io_apic.cpp  io_apic.hpp  lapic.cpp  lapic.hpp  madt.cpp  pci.cpp  pci.hpp  qacpi.cpp  sleep.cpp  sleep.hpp
src/arch/: CMakeLists.txt  cpu.h  cpu.hpp  interrupts.h  irq.hpp  map.cpp  map.h  map.hpp  misc.h  misc.hpp  mod.h  random.hpp  sleep.hpp
src/cpu/: cpu.cpp  cpu.hpp
src/debug/: backtrace.cpp  backtrace.hpp  debug.hpp  gdb.cpp
src/dev/: CMakeLists.txt  clock.cpp  clock.hpp  con.c  date_time_provider.cpp  date_time_provider.hpp  dev.cpp  dev.h  dev.hpp  event.cpp  event.hpp  evm.cpp  evm.hpp  fb.c  fb.h  fbcon.c  fbcon.h  file.c  file.h  pci.c  pci.cpp  pci.h  pci.hpp  pci_enum.c  pci_enum.h  random.cpp  random.hpp  reset.hpp  timer.c  timer.h  user_dev.cpp  user_dev.hpp
src/drivers/: dev.hpp  hpet.cpp  hpet.hpp  nvme.cpp  pci.cpp  pci.hpp  pci_drivers.hpp  pit.cpp  pit.hpp  ps2.cpp  ps2.hpp  tsc.hpp
src/exe/: CMakeLists.txt  elf.hpp  elf_loader.c  elf_loader.cpp  elf_loader.h  elf_loader.hpp
src/fs/: CMakeLists.txt  ext2.c  pipe.cpp  pipe.hpp  tar.c  tar.cpp  tar.hpp  vfs.c  vfs.cpp  vfs.h  vfs.hpp
src/interrupts/: exceptions.cpp  exceptions.hpp  gdt.asm  gdt.cpp  gdt.hpp  int_stubs.asm  interrupts.cpp  interrupts.hpp
src/mem/: CMakeLists.txt  allocator.c  allocator.cpp  allocator.h  allocator.hpp  iospace.cpp  iospace.hpp  malloc.cpp  malloc.hpp  mem.cpp  mem.hpp  page.cpp  page.h  page.hpp  page_allocator.cpp  page_allocator.hpp  pmalloc.c  pmalloc.cpp  pmalloc.hpp  portspace.hpp  register.hpp  unique_phys.cpp  unique_phys.hpp  user.h  utils.c  utils.h  vm.c  vm.h  vmem.c  vmem.cpp  vmem.h  vmem.hpp  vspace.cpp  vspace.hpp
src/memory/: allocator.cpp  map.cpp  map.hpp  memory.hpp  page_allocator.cpp  pmm.hpp  std.cpp  std.hpp  vmem.cpp  vmem.hpp
src/noalloc/: string.hpp
src/proto/: elf.hpp
src/sched/: CMakeLists.txt  cpu.inc  cpu_set.hpp  deferred_work.hpp  event_queue.c  event_queue.h  handle_table.cpp  handle_table.hpp  ipc.cpp  ipc.hpp  irq_mutex.c  mutex.c  mutex.cpp  mutex.h  mutex.hpp  process.c  process.cpp  process.h  process.hpp  sched.asm  sched.c  sched.cpp  sched.h  sched.hpp  sched_internals.h  shared_mem.cpp  shared_mem.hpp  signal_ctx.cpp  signal_ctx.hpp  sysv.hpp  task.c  task.h  task.inc  thread.cpp  thread.hpp
src/scheduling/: scheduler.asm  scheduler.cpp  scheduler.hpp
src/std/: CMakeLists.txt  algorithm.hpp  array.hpp  assert.h  assert.hpp  atomic.hpp  bit.hpp  cmath.hpp  compare.hpp  concepts.hpp  cstddef.hpp  cstdint.hpp  cstring.cpp  cstring.hpp  ctype.c  ctype.h  cxx.cpp  double_list.hpp  expected.hpp  format.hpp  functional.hpp  initializer_list.hpp  inttypes.h  inttypes.hpp  limits.hpp  list.hpp  manually_destroy.hpp  manually_init.hpp  memory.hpp  misc.hpp  new.cpp  new.hpp  optional.hpp  rb_tree.hpp  ring_buffer.hpp  shared_ptr.hpp  span.hpp  stdio.c  stdio.cpp  stdio.h  (+14 more)
src/sys/: CMakeLists.txt  dev.c  dev.h  event_queue.cpp  event_queue.hpp  fs.c  fs.h  gal.c  service.cpp  service.hpp  socket.hpp  syscalls.c  syscalls.cpp  syscalls.hpp  user_access.hpp  utils.c  utils.h
src/timer/: timer.cpp  timer.hpp  timer_int.cpp  timer_int.hpp
src/tty/: layout_fi.c  tty.c
src/usermode/: syscall.asm  syscall.cpp  usermode.asm  usermode.hpp
src/utils/: CMakeLists.txt  attribs.h  cpu_var.hpp  cpuid.hpp  driver.hpp  elf.h  flags_enum.hpp  handle.c  handle.h  irq_guard.hpp  kgdb.cpp  kgdb.hpp  math.h  math.hpp  misc.hpp  rb_tree.h  rb_tree.hpp  rw_spinlock.hpp  spinlock.c  spinlock.cpp  spinlock.h  spinlock.hpp  str.h  test.h  ubsan.cpp  utils.hpp
(+505 files in other folders)
