add_subdirectory(acpi)
add_subdirectory(dev)
add_subdirectory(exe)
add_subdirectory(fs)
add_subdirectory(std)
add_subdirectory(mem)
add_subdirectory(sched)
add_subdirectory(sys)
add_subdirectory(utils)

if(ARCH STREQUAL "x86_64")
	add_subdirectory(arch/x86)
elseif(ARCH STREQUAL "aarch64")
	add_subdirectory(arch/aarch64)
elseif(ARCH STREQUAL "user")
	add_subdirectory(arch/user)
else()
	message(FATAL_ERROR "Unsupported architecture ${ARCH}")
endif()
